[tool.poetry]
name = "kaggle-rossmann"
version = "0.1.0"
description = ""
authors = ["Mauricio Anderson <m.anderson.ricci@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_rossmann"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
ipython = "^8.10.0"
jupyter = "^1.0.0"
ipykernel = "^6.21.2"
tensorflow = "^2.11.0"
isoweek = "^1.3.3"
pyarrow = "^11.0.0"
sklearn-pandas = "^2.2.0"
pandas-summary = "^0.2.0"
absl-py = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
